results/print-ir/expected/failure/parser/unclosed_list_type.psy.out
error: syntax error, unexpected IDENTIFIER, expecting ]
  --> tests/failure/parser/unclosed_list_type.psy:2:18
   |
  2|     var list[3 ls = [1, 2, 3];
   |                  ^--- Here

